libsql-server/tests/standalone/snapshots/tests__standalone__attach__attach_auth-3.snap
---
source: libsql-server/tests/standalone/attach.rs
expression: "bar_conn.execute(\"ATTACH foo as foo\", ()).await.unwrap_err()"
---
Hrana(
    Api(
        "{\"error\":\"Authorization forbidden: Namespace `foo` doesn't allow attach\"}",
    ),
)
