libsql-server/tests/standalone/snapshots/tests__standalone__attach__attach_auth_with_uuids-2.snap
---
source: libsql-server/tests/standalone/attach.rs
expression: rows.next().await
---
Ok(
    Some(
        Row {
            cols: [
                Col {
                    name: Some(
                        "x",
                    ),
                    decltype: None,
                },
            ],
            inner: [
                Integer {
                    value: 43,
                },
            ],
        },
    ),
)
